httproute/keel-webhook-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keel-webhook-route
  namespace: keel
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main-gateway
      namespace: jodubranding
  hostnames:
    - keel-webhook.chauvet.dev
    - cilium-gateway-main-gateway.jodubranding.svc.cluster.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keel
          port: 9300
